[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "alertwise"
version = "1.0.0"
description = "SIEM Alert Triage & Noise Reduction Engine"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "rich>=13.7.0",
    "jinja2>=3.1.3",
    "python-dotenv>=1.0.1",
]

[project.scripts]
alertwise = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py310"